--- a/app/stylesheets/main.styl
+++ b/app/stylesheets/main.styl
@@ -1,6 +1,7 @@
 @import 'nib';
 
 gris_claro = #f4f3f3
+gris_border = #d3d3d1
 
 body
 	margin 0
@@ -18,7 +19,7 @@ body
 .table
 	margin 0
 	&-left
-		width 250px
+		width 220px
 		&-header
 			background gris_claro
 			width 99.5%
@@ -26,8 +27,8 @@ body
 			display flex
 			align-items center
 			justify-content center
-			border-bottom 1px solid #d3d3d3
-			border-right 1px solid #d3d3d3
+			border-bottom 1px solid gris_border
+			border-right 1px solid gris_border
 			&-input
 				width 90%
 				height 100%
@@ -39,7 +40,7 @@ body
 	border-bottom 1px solid gris_claro
 	&-item
 		width 70px
-		border-right 1px solid #d3d3d3
+		border-right 1px solid gris_border
 		display flex
 		p
 			margin 0
@@ -57,20 +58,21 @@ body
 #info-data
 	width 100%
 	height 2em
-	border-bottom 1px solid gray
+	border-bottom 1px solid gris_border
 	&:last-child
 		border-bottom 0
 	.info-item
-		border-right 1px solid #d3d3d3
+		border-right 1px solid gris_border
 		p
 			background gris_claro
 			input
-				border 1px solid gray
+				border 1px solid gris_border
 				width 80%
 				height 60%
-				border 1px solid gray
+				border 1px solid gris_border
+	
 		&:last-child 
-			width 3.2em
+			width 3.1em
 			
 		
 
@@ -86,7 +88,7 @@ body
 // 		display flex
 // 		align-items center
 // 		justify-content center
-// 		border 1px solid #d3d3d3
+// 		border 1px solid gris_border
 // 		border-top 0
 // 		border-left 0
 // 		&-title
@@ -102,7 +104,7 @@ body
 // 				right 5px
 // 	#sizes-data
 // 		height 2em !important
-// 		border-bottom 1px solid gray
+// 		border-bottom 1px solid gris_border
 // 		&:last-child
 // 			border-bottom 0
 // 		.sizes-list
@@ -112,7 +114,7 @@ body
 // 			input
 // 				width 70%
 // 				height 1.7em
-// 				border 1px solid gray
+// 				border 1px solid gris_border
 // 				position relative 
 // 				top 1px
 				
@@ -123,7 +125,7 @@ body
 // 		justify-content center
 // 		height 60px
 // 		&-title
-// 			border-bottom 1px solid #d3d3d3
+// 			border-bottom 1px solid gris_border
 // 			height 50%
 // 			display flex
 // 			align-items center
@@ -153,7 +155,7 @@ body
 // 					height 100%
 // 					width 100%
 // 					span
-// 						border-right 1px solid #d3d3d3
+// 						border-right 1px solid gris_border
 // 						width 50%
 // 						height 100%
 // 						display flex
@@ -193,7 +195,7 @@ body
 				
 	#sizes-data
 		height 2em !important
-		border-bottom 1px solid gray
+		border-top 1px solid gris_border
 		&:last-child
 			border-bottom 0
 		.sizes-list
@@ -203,9 +205,8 @@ body
 			input
 				width 70%
 				height 1.7em
-				border 1px solid gray
-				position relative 
-				top 1px
+				border 1px solid gris_border
+				
 	.sizes
 		display flex
 		flex-direction column
@@ -217,7 +218,7 @@ body
 			height 30px
 			border-bottom 1px solid gris_claro
 			&-item
-				margin 0 20px
+				margin 0 3px
 			span.fa
 				cursor pointer
 				
@@ -225,19 +226,18 @@ body
 			margin 0
 			overflow hidden
 			max-width 800px
-			padding-top 1px
 			.sizes-list
 				display flex
 				height 30px
 				position relative
 				transition .5s
 				&:last-child
-					border-bottom 0px solid gray
+					border-bottom 0px solid gris_border
 				&-item
 					margin 0
 					width 100px
 					height 100%
-					border-bottom 1px solid gray
+					border-bottom 1px solid gris_border
 					
 					p
 						margin 0
@@ -246,7 +246,7 @@ body
 						display flex
 						justify-content center
 						align-items center
-						background gris_claro
+						background white
 						span
 							margin 0
 							width 50%
@@ -254,11 +254,11 @@ body
 							display flex
 							justify-content center
 							align-items center
-							border-right 1px solid gray
+							border-right 1px solid gris_border
 						input
 							width 70%
 							height 60%
-							border 1px solid gray
+							border 1px solid gris_border
 					&:last-child
 						span
 							&:last-child 
@@ -284,7 +284,7 @@ input,textarea,select, button
 	position relative
 .container
 	max-width 1000px
-	padding 0 1em
+	padding 0 .2em
 	margin-left auto
 	margin-right auto
 .flex
@@ -306,7 +306,7 @@ input,textarea,select, button
 
 
 .border
-	border 1px solid #d3d3d3
+	border 1px solid gris_border
 
 .btn
 	appearance none
@@ -337,6 +337,8 @@ input,textarea,select, button
 
 .margin0
 	margin 0
+.margin20
+	margin 20px
 	
 .text-center
 	text-align center
