--- a/app/stylesheets/media.css
+++ b/app/stylesheets/media.css
@@ -1,4 +1,18 @@
 
+@media screen and (min-width: 400px){
+	.sizes-title-item{
+		margin: 0 20px !important;
+	}
+}
+
+
+@media screen and (min-width: 648px){
+	.container{
+		padding: 0 1.5em;
+	}
+
+}
+
 
 @media screen and (min-width: 768px){
 	.right .header{
@@ -8,5 +22,14 @@
 	.right .header .header-title{
 		display: inline-block;
 		margin: 0 2px 0 20px;
+	}
+}
+@media screen and (min-width: 1100px){
+
+	.sizes-list-item p{
+		width: 100% !important;
+	}
+	.sizes-title span.fa{
+		display:  none !important;
 	}
 }
